<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_blue_bg"
    android:gravity="center_horizontal"
    android:keepScreenOn="true"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextTBLESend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="#FFF"
            android:ems="30"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <Button
            android:id="@+id/buttonTBLESend"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/send"
            android:textColor="@color/color_blue_dark" />

        <Button
            android:id="@+id/buttonTBLERepeat"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/repeat"
            android:textColor="@color/color_blue_dark" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewTBLE"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#000"
        android:scrollbars="vertical">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTBLETypeConn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tble_type_connection"
            android:textColor="#9437FF" />

        <TextView
            android:id="@+id/textViewTBLETypeDisconn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tble_type_disconn"
            android:textColor="#FF2F92" />

        <TextView
            android:id="@+id/textViewTBLETypeRecv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tble_type_receive"
            android:textColor="@color/md_blue_800" />

        <TextView
            android:id="@+id/textViewTBLETypeSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tble_type_send"
            android:textColor="#009051" />

        <TextView
            android:id="@+id/textViewTBLETypeOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tble_type_other"
            android:textColor="#941100" />
    </LinearLayout>

</LinearLayout>