<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:background="@color/color_blue_light_bg"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="#ffffff"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imageViewConnApp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_margin="25dp"
            android:scaleType="fitCenter"
            android:src="@drawable/app" />

    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/color_blue"
            android:gravity="center|center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/bt_icon"
                android:contentDescription="TODO" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_bluetooth"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutConnConnecting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewConnAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/bt_scanning"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_blue_dark"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_gravity="center"

                android:indeterminate="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/turn_on_device"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_blue_dark"
                android:textSize="@dimen/text_size_large2"
                android:textStyle="bold"
                 />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutConnConnectionError"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/textViewConnError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/bt_device_not_connected"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FF0000"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonConnTryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_button"
            android:padding="10dp"
            android:text="@string/try_connection_again"
            android:textColor="@color/color_blue_dark"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
